# figfind

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  setup.cfg
config/: figfind.yml.example
figfind/: figfile.py  filesystem.py  main.py
figfind/controllers/: base.py
figfind/core/: exc.py  version.py
tests/: conftest.py  test_filesystem.py
