[tool.poetry]
name = "figfind"
version = "0.1.0"
description = ""
authors = ["steventimberman <stevetimberman@gmail.com>"]
readme = "README.md"
repository = "https://github.com/steventimberman/figfind"
packages = [{include = "figfind"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.3"
PyYAML = "^6.0"
colorlog = "^6.6.0"
commitizen = "^2.20.0"
click = "^8.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "21.9-beta.0"
pre-commit = "2.15.0"
pytest-cov = "^3.0.0"
coverage = "^6.1.2"
mypy = "^0.910"
isort = "^5.10.1"
flake8 = "^4.0.1"
blacken-docs = "^1.11.0"
pytest-mock = "^3.6.1"


[tool.poetry.scripts]
figfind = 'figfind.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[mypy]
python_version = "3.10"
files= "figfind"
ignore_missing_imports = true
